회원정보, 비밀번호 변경 추가 및 코드정리

--- a/src/main/resources/message/label.properties
+++ b/src/main/resources/message/label.properties
@@ -10,6 +10,7 @@ name=이름
 birthday=생년월일
 email=이메일
 gender=성별
+regdate=가입일
 register.btn=가입완료
 reset.btn=다시작성
 register.done=<strong>{0}님</strong> 회원가입을 축하합니다.
@@ -31,7 +32,10 @@ change.pwd.title=비밀번호 변경
 currentPassword=현재 비밀번호
 newPassword=새로운 비밀번호
 change.btn=변경하기
-notMaching.currentPassword=비밀번호를 잘못입력하였습니다.
+notMatching.currentPwd=비밀번호를 잘못입력하였습니다.
 change.pwd.done=비밀번호를 변경하였습니다.
+change.memberInfo.done=회원정보를 변경하였습니다.
+
+change.memberInfo.title=회원정보 수정
 
 typeMismatch.java.util.Date=잘못된 형식을 입력하였습니다.
