회원 탈퇴 추가

--- a/src/main/resources/message/label.properties
+++ b/src/main/resources/message/label.properties
@@ -27,6 +27,7 @@ login.btn=로그인 하기
 IdPasswordMatching=아이디와 비밀번호를 확인해주세요
 login.done=로그인 성공
 rememberId=아이디 기억하기
+MemberNotFound=아이디와 비밀번호를 확인해주세요
 
 change.pwd.title=비밀번호 변경
 currentPassword=현재 비밀번호
@@ -39,3 +40,7 @@ change.memberInfo.done=회원정보를 변경하였습니다.
 change.memberInfo.title=회원정보 수정
 
 typeMismatch.java.util.Date=잘못된 형식을 입력하였습니다.
+
+delete.member=회원탈퇴
+delete.btn=탈퇴하기
+notMatching.password=비밀번호가 일치하지않습니다.
