게시판 목록보기

--- a/src/main/resources/message/label.properties
+++ b/src/main/resources/message/label.properties
@@ -44,3 +44,18 @@ typeMismatch.java.util.Date=잘못된 형식을 입력하였습니다.
 delete.member=회원탈퇴
 delete.btn=탈퇴하기
 notMatching.password=비밀번호가 일치하지않습니다.
+
+board.title=게시판
+board.btn=게시판 바로가기
+write.btn=글쓰기
+complet.write.btn=작성완료
+back.btn=나가기
+write.num=번호
+subject=제목
+writer=작성자
+readcount=조회수
+write.regdate=작성일
+content=내용
+edit.btn=수정
+delete.btn=삭제
+reply.btn=답글
